1archive/ARM/resources.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.17.1.54307",
      "templateHash": "11453007703022839041"
    }
  },
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]"
    },
    "virtualNetworkName": {
      "type": "string",
      "defaultValue": "vNet-AzProject"
    },
    "subnetName1": {
      "type": "string",
      "defaultValue": "SubNet1-AzProject"
    },
    "subnetName2": {
      "type": "string",
      "defaultValue": "SubNet2-AzProject"
    },
    "subnetName3": {
      "type": "string",
      "defaultValue": "SubNet3-AzProject"
    },
    "networkSecurityGroupName": {
      "type": "string",
      "defaultValue": "NSG-AzProject"
    },
    "SSHStorageName": {
      "type": "string",
      "defaultValue": "SSHKeysForManage"
    },
    "SSHStorageNameClients": {
      "type": "string",
      "defaultValue": "SSHKeysForClients"
    },
    "PublicKeyForServers": {
      "type": "string"

    },
    "PublicKeyForClients": {
      "type": "string"
    }
  },
  "variables": {
    "subnetAddressPrefix_1": "10.1.0.0/24",
    "subnetAddressPrefix_2": "10.1.1.0/24",
    "subnetAddressPrefix_3": "10.1.2.0/24",
    "addressPrefix": "10.1.0.0/16"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2022-09-01",
      "name": "[parameters('networkSecurityGroupName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "properties": {
              "priority": 1000,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "178.134.247.73",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "10.1.0.4",
              "destinationPortRange": "22"
            }
          },
          {
            "name": "SiteAllow_HTTP",
            "properties": {
              "priority": 999,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "10.1.1.0/24",
              "destinationPortRange": "80"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2022-09-01",
      "name": "[parameters('virtualNetworkName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('addressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('subnetName1')]",
            "properties": {
              "addressPrefix": "[variables('subnetAddressPrefix_1')]"
            }
          },
          {
            "name": "[parameters('subnetName2')]",
            "properties": {
              "addressPrefix": "[variables('subnetAddressPrefix_2')]"
            }
          },
          {
            "name": "[parameters('subnetName3')]",
            "properties": {
              "addressPrefix": "[variables('subnetAddressPrefix_3')]"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Compute/sshPublicKeys",
      "apiVersion": "2022-11-01",
      "location": "[parameters('location')]",
      "name": "[parameters('SSHStorageName')]",
      "properties": {
        "publicKey": "[parameters('PublicKeyForServers')]"
      }
    },
    {
      "type": "Microsoft.Compute/sshPublicKeys",
      "apiVersion": "2022-11-01",
      "location": "[parameters('location')]",
      "name": "[parameters('SSHStorageNameClients')]",
      "properties": {
        "publicKey": "[parameters('PublicKeyForClients')]"
      }
    }
  ]
}
